[package]
name = "e2b-sdk"
version = "0.1.1"
edition = "2021"
authors = ["Tim Tully <tim@menlovc.com>"]
description = "A Rust SDK for interacting with the E2B API"
license = "MIT"
repository = "https://github.com/tullytim/e2b_rust"
documentation = "https://docs.rs/e2b_sdk"
readme = "README.md"
keywords = ["e2b", "sdk", "api"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11"  # Or latest version
log = "0.4"
serde_json = "1.0"
futures-util = "0.3"
thiserror = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"
pretty_assertions = "1.0"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
~
~
